Fix the z-index of the minimap navigator in frontend (#1270)
The z-index of the minimap navigator is set too high and it's on top of the pop-up windows. This PRs lowers the size to fix the UI bug. Fixed #1210

--- a/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.scss
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.scss
@@ -12,7 +12,7 @@
   position: absolute;
   pointer-events: all;
   cursor: move;
-  z-index: 1001;
+  z-index: 2;
 }
 
 .texera-mini-map-button-shown {
